log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:17:21 PM UTC 2026: 
 graph.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
========================================
bb7c913
Thu May 14 08:18:43 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c816057
Thu May 14 08:21:03 PM UTC 2026: 
 graph.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:33:10: error: ‘Graph’ has no member named ‘map_create’
   33 |     Grafo->map_create(is_equal_string);
      |          ^~
4f6930b
Thu May 14 08:21:19 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:33:24: error: invalid use of incomplete typedef ‘Map’
   33 |     Grafo->adjacencyMap->map_create(is_equal_string);
      |                        ^~
1f84174
Thu May 14 08:22:09 PM UTC 2026: 
 graph.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:33:24: error: invalid use of incomplete typedef ‘Map’
   33 |     Grafo->adjacencyMap->map_create(is_equal_string);
      |                        ^~
eb3facd
Thu May 14 08:22:39 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0a0f18c
Thu May 14 08:47:48 PM UTC 2026: 
 graph.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:39:5: error: unknown type name ‘Node’
   39 |     Node* nodo = (Node*) malloc(sizeof(Node));
      |     ^~~~
graph.c:39:19: error: ‘Node’ undeclared (first use in this function)
   39 |     Node* nodo = (Node*) malloc(sizeof(Node));
      |                   ^~~~
graph.c:39:19: note: each undeclared identifier is reported only once for each function it appears in
graph.c:39:24: error: expected expression before ‘)’ token
   39 |     Node* nodo = (Node*) malloc(sizeof(Node));
      |                        ^
graph.c:40:21: error: expected identifier before ‘(’ token
   40 |     strcpy(g, nodo->(char* label), nodo);
      |                     ^
graph.c:40:12: error: passing argument 1 of ‘strcpy’ from incompatible pointer type [-Wincompatible-pointer-types]
   40 |     strcpy(g, nodo->(char* label), nodo);
      |            ^
      |            |
      |            Graph *
In file included from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/features.h:511,
                 from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/libc-header-start.h:33,
                 from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdio.h:28,
                 from test.c:1:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/string_fortified.h:77:16: note: expected ‘char *’ but argument is of type ‘Graph *’
   77 | __NTH (strcpy (__fortify_clang_overload_arg (char *, __restrict, __dest),
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
graph.c:41:12: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   41 |     return nodo;
      |            ^~~~
graph.c:37:6: note: declared here
   37 | void addNode(Graph* g, const char* label) {
      |      ^~~~~~~
c38deb2
Thu May 14 08:49:36 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:39:38: error: invalid application of ‘sizeof’ to incomplete type ‘Map’
   39 |     Map* nodo = (Map*) malloc(sizeof(Map));
      |                                      ^~~
graph.c:40:21: error: expected identifier before ‘(’ token
   40 |     strcpy(g, nodo->(char* label), nodo);
      |                     ^
graph.c:40:12: error: passing argument 1 of ‘strcpy’ from incompatible pointer type [-Wincompatible-pointer-types]
   40 |     strcpy(g, nodo->(char* label), nodo);
      |            ^
      |            |
      |            Graph *
In file included from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/features.h:511,
                 from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/libc-header-start.h:33,
                 from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdio.h:28,
                 from test.c:1:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/string_fortified.h:77:16: note: expected ‘char *’ but argument is of type ‘Graph *’
   77 | __NTH (strcpy (__fortify_clang_overload_arg (char *, __restrict, __dest),
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
graph.c:41:12: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   41 |     return nodo;
      |            ^~~~
graph.c:37:6: note: declared here
   37 | void addNode(Graph* g, const char* label) {
      |      ^~~~~~~
1e2bdb9
Thu May 14 08:51:59 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:39:38: error: invalid application of ‘sizeof’ to incomplete type ‘Map’
   39 |     Map* nodo = (Map*) malloc(sizeof(Map));
      |                                      ^~~
graph.c:40:19: error: invalid use of incomplete typedef ‘Map’
   40 |     strcpy(g, nodo->label, nodo);
      |                   ^~
graph.c:40:12: error: passing argument 1 of ‘strcpy’ from incompatible pointer type [-Wincompatible-pointer-types]
   40 |     strcpy(g, nodo->label, nodo);
      |            ^
      |            |
      |            Graph *
In file included from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/features.h:511,
                 from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/libc-header-start.h:33,
                 from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdio.h:28,
                 from test.c:1:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/string_fortified.h:77:16: note: expected ‘char *’ but argument is of type ‘Graph *’
   77 | __NTH (strcpy (__fortify_clang_overload_arg (char *, __restrict, __dest),
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
graph.c:40:5: error: too many arguments to function ‘strcpy’
   40 |     strcpy(g, nodo->label, nodo);
      |     ^~~~~~
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/string_fortified.h:77:1: note: declared here
   77 | __NTH (strcpy (__fortify_clang_overload_arg (char *, __restrict, __dest),
      | ^~~~~
graph.c:41:12: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   41 |     return nodo;
      |            ^~~~
graph.c:37:6: note: declared here
   37 | void addNode(Graph* g, const char* label) {
      |      ^~~~~~~
a730a1b
